deps/v8/test/message/fail/for-in-loop-initializers-strict.out
# Copyright 2014 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:8: SyntaxError: for-in loop variable declaration may not have an initializer.
  for (var x = void 0 in [1, 2, 3]) {
           ^^^^^^^^^^
SyntaxError: for-in loop variable declaration may not have an initializer.
